criamos arquivos style.css, e alteramos o backgound

--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ronaldo Cipriano</title>
+    <style>
+      body {
+        font-family: sans-serif;
+        background-color: rgba(134,160,226,255);
+      }
+
+      h1{
+        font-family: helvetica;
+      }
+      ol{
+        line-height: 30px;
+      }
+      ul {
+        line-height: 30px;
+      }
+    </style>
   </head>
   <body>
     <h1>RONALDO CIPRIANO</h1>
